@@ -128,8 +128,8 @@ Octave TeXInfo manual shows clean TeXInfo structure
 @setfilename nco.info
 
 @c Define edition, date, ...
-@set nco-edition 5.3.2-alpha02
-@set doc-edition 5.3.2-alpha02
+@set nco-edition 5.3.2-alpha03
+@set doc-edition 5.3.2-alpha03
 @set copyright-years 1995--2025
 @set update-year 2025
 @set update-date 24 January 2025
